# DevOps-Instagram-Content-Generator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: analytics.py  auth.py  gallery.py  generate.py  health.py  incidents.py  router.py  scheduler.py  trends.py  users.py
backend/app/core/: cloudinary_client.py  database.py  exceptions.py  job_queue.py  logging.py  redis_client.py  security.py  telemetry.py
backend/app/models/: generation.py  incident.py  scheduled_job.py  trend.py  user.py
backend/app/repositories/: base.py  generation_repo.py  user_repo.py
backend/app/services/: generation_service.py  incident_service.py  scheduler_service.py  trend_service.py
backend/app/services/ai/: image_engine.py  text_engine.py
backend/app/services/ai/prompts/: devops_prompts.py
backend/app/services/ai/providers/: fal_provider.py  gemini_image_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  openai_provider.py  openrouter_provider.py  pollinations_provider.py  text_card_provider.py  together_provider.py
backend/tests/: conftest.py
backend/tests/unit/services/: test_incident_service.py  test_text_engine.py
docs/: architecture.excalidraw  grafana-dashboard.json
frontend/: .env.example  Dockerfile  netlify.toml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(private)/: layout.tsx
frontend/src/components/: Providers.tsx  ShareButtons.tsx  Sidebar.tsx
frontend/src/hooks/: useAnalytics.ts  useBackendWakeup.ts  useGallery.ts  useGenerate.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/stores/: auth.ts  generation.ts
frontend/src/types/: index.ts  next-auth.d.ts
scripts/: generate_architecture.py  generate_excalidraw.py  seed_db.py  test_providers.py
shared/: categories.py
(+7 files in other folders)
